--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -69,7 +69,7 @@ header {
 * Input Footer
 **/
 
-footer {
+.user-input {
   background: $white;
   bottom: 0;
   border-top: 1px solid $lite-grey;
@@ -103,5 +103,26 @@ footer {
       overflow: hidden;
       text-indent: -9999px;
     }
+  }
+}
+
+.user-message {
+  padding: 10px;
+
+  &.mary {
+    background: #ccffcc;
+  }
+
+  &.bob {
+    background: #ccccff;
+  }
+}
+
+.user-input {
+  transform: translateY(100%);
+  transition: transform .6s;
+
+  &.active {
+    transform: translateY(0);
   }
 }
