Fixed scrolling issue

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -95,10 +95,10 @@ header {
 }
 
 #chat {
-  bottom: 0;
+  //bottom: 0;
   box-sizing: border-box;
   display: block;
-  position: absolute;
+  //position: absolute;
   //padding: 16px 16px 16px 58px;
   padding: 16px;
   width: 100%;
