--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -352,6 +352,7 @@ header {
   right: 30px;
   transform: translateY(100%);
   transition: transform .6s;
+  box-shadow: 0 6px 12px rgba(0,0,0,0.1);
 }
 
 #toggle-chat:checked ~ .chatbob-iframe {
