--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -164,6 +164,10 @@ header {
     }
   }
 
+  img {
+    float: left;
+  }
+
 }
 
 /**
@@ -361,16 +365,37 @@ header {
 
 .chatbob-iframe {
   border: none;
-  position: fixed;
+  /*position: fixed;
   bottom: 0;
   right: 30px;
   transform: translateY(100%);
   transition: transform .6s;
-  box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+  box-shadow: 0 6px 12px rgba(0,0,0,0.1);*/
 }
 
-#toggle-chat:checked ~ .chatbob-iframe {
+#toggle-chat:checked ~ .iframe-wrapper {
   transform: translateY(0);
+}
+
+.iframe-wrapper {
+  position: fixed;
+  bottom: -7px;
+  right: 30px;
+  transform: translateY(100%);
+  transition: transform .6s;
+  box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+
+  iframe {
+    z-index: 1;
+  }
+}
+
+#close-window {
+  position: absolute;
+  display: block;
+  height: 56px;
+  width: 62px;
+  z-index: 300;
 }
 
 // Scrollbar
